@@ -1,28 +1,45 @@
 package org.jabref.gui.preferences.importexport;
 
+import java.io.IOException;
+import java.net.HttpURLConnection;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
+
+import javax.net.ssl.HostnameVerifier;
+import javax.net.ssl.HttpsURLConnection;
+import javax.net.ssl.SSLSocketFactory;
 
 import javafx.beans.property.BooleanProperty;
 import javafx.beans.property.ListProperty;
+import javafx.beans.property.ObjectProperty;
 import javafx.beans.property.SimpleBooleanProperty;
 import javafx.beans.property.SimpleListProperty;
+import javafx.beans.property.SimpleObjectProperty;
 import javafx.beans.property.SimpleStringProperty;
 import javafx.beans.property.StringProperty;
 import javafx.collections.FXCollections;
 
+import org.jabref.gui.DialogService;
 import org.jabref.gui.commonfxcontrols.SortCriterionViewModel;
 import org.jabref.gui.preferences.PreferenceTabViewModel;
 import org.jabref.logic.importer.ImporterPreferences;
+import org.jabref.logic.importer.WebFetchers;
+import org.jabref.logic.importer.fetcher.CustomizableKeyFetcher;
+import org.jabref.logic.l10n.Localization;
+import org.jabref.logic.net.URLDownload;
 import org.jabref.logic.preferences.DOIPreferences;
+import org.jabref.logic.preferences.FetcherApiKey;
 import org.jabref.model.entry.field.Field;
 import org.jabref.model.entry.field.FieldFactory;
 import org.jabref.model.metadata.SaveOrderConfig;
 import org.jabref.preferences.PreferencesService;
 
 public class ImportExportTabViewModel implements PreferenceTabViewModel {
+
+    private final ListProperty<FetcherApiKey> apiKeys = new SimpleListProperty<>();
+    private final ObjectProperty<FetcherApiKey> selectedApiKeyProperty = new SimpleObjectProperty<>();
 
     private final BooleanProperty generateKeyOnImportProperty = new SimpleBooleanProperty();
 
@@ -39,12 +56,14 @@ public class ImportExportTabViewModel implements PreferenceTabViewModel {
     private final BooleanProperty grobidEnabledProperty = new SimpleBooleanProperty();
     private final StringProperty grobidURLProperty = new SimpleStringProperty("");
 
+    private final DialogService dialogService;
     private final PreferencesService preferencesService;
     private final DOIPreferences doiPreferences;
     private final ImporterPreferences importerPreferences;
     private final SaveOrderConfig initialExportOrder;
 
-    public ImportExportTabViewModel(PreferencesService preferencesService, DOIPreferences doiPreferences) {
+    public ImportExportTabViewModel(PreferencesService preferencesService, DOIPreferences doiPreferences, DialogService dialogService) {
+        this.dialogService = dialogService;
         this.preferencesService = preferencesService;
         this.importerPreferences = preferencesService.getImporterPreferences();
         this.doiPreferences = doiPreferences;
@@ -69,10 +88,12 @@ public class ImportExportTabViewModel implements PreferenceTabViewModel {
         sortableFieldsProperty.addAll(fieldNames);
         sortCriteriaProperty.addAll(initialExportOrder.getSortCriteria().stream()
                                                       .map(SortCriterionViewModel::new)
-                                                      .collect(Collectors.toList()));
+                                                      .toList());
 
         grobidEnabledProperty.setValue(importerPreferences.isGrobidEnabled());
         grobidURLProperty.setValue(importerPreferences.getGrobidURL());
+
+        apiKeys.setValue(FXCollections.observableArrayList(preferencesService.getImporterPreferences().getApiKeys()));
     }
 
     @Override
@@ -89,6 +110,10 @@ public class ImportExportTabViewModel implements PreferenceTabViewModel {
                 SaveOrderConfig.OrderType.fromBooleans(exportInSpecifiedOrderProperty.getValue(), exportInTableOrderProperty.getValue()),
                 sortCriteriaProperty.stream().map(SortCriterionViewModel::getCriterion).toList());
         preferencesService.storeExportSaveOrder(newSaveOrderConfig);
+
+        // API keys
+        preferencesService.getImporterPreferences().getApiKeys().clear();
+        preferencesService.getImporterPreferences().getApiKeys().addAll(apiKeys);
     }
 
     public BooleanProperty generateKeyOnImportProperty() {
@@ -131,5 +156,68 @@ public class ImportExportTabViewModel implements PreferenceTabViewModel {
 
     public StringProperty grobidURLProperty() {
         return grobidURLProperty;
+    }
+
+    public ListProperty<FetcherApiKey> fetcherApiKeys() {
+        return apiKeys;
+    }
+
+    public ObjectProperty<FetcherApiKey> selectedApiKeyProperty() {
+        return selectedApiKeyProperty;
+    }
+
+    public void checkCustomApiKey() {
+        final String apiKeyName = selectedApiKeyProperty.get().getName();
+
+        final Optional<CustomizableKeyFetcher> fetcherOpt =
+                WebFetchers.getCustomizableKeyFetchers(
+                                   preferencesService.getImportFormatPreferences(),
+                                   preferencesService.getImporterPreferences())
+                           .stream()
+                           .filter(fetcher -> fetcher.getName().equals(apiKeyName))
+                           .findFirst();
+
+        if (fetcherOpt.isEmpty()) {
+            dialogService.showErrorDialogAndWait(
+                    Localization.lang("Check %0 API Key Setting", apiKeyName),
+                    Localization.lang("Fetcher unknown!"));
+            return;
+        }
+
+        final String testUrlWithoutApiKey = fetcherOpt.get().getTestUrl();
+        if (testUrlWithoutApiKey == null) {
+            dialogService.showWarningDialogAndWait(
+                    Localization.lang("Check %0 API Key Setting", apiKeyName),
+                    Localization.lang("Fetcher cannot be tested!"));
+            return;
+        }
+
+        final String apiKey = selectedApiKeyProperty.get().getKey();
+
+        boolean keyValid;
+        if (!apiKey.isEmpty()) {
+            URLDownload urlDownload;
+            try {
+                SSLSocketFactory defaultSslSocketFactory = HttpsURLConnection.getDefaultSSLSocketFactory();
+                HostnameVerifier defaultHostnameVerifier = HttpsURLConnection.getDefaultHostnameVerifier();
+
+                urlDownload = new URLDownload(testUrlWithoutApiKey + apiKey);
+                // The HEAD request cannot be used because its response is not 200 (maybe 404 or 596...).
+                int statusCode = ((HttpURLConnection) urlDownload.getSource().openConnection()).getResponseCode();
+                keyValid = statusCode >= 200 && statusCode < 300;
+
+                URLDownload.setSSLVerification(defaultSslSocketFactory, defaultHostnameVerifier);
+            } catch (IOException | kong.unirest.UnirestException e) {
+                keyValid = false;
+            }
+        } else {
+            keyValid = false;
+        }
+
+        if (keyValid) {
+            dialogService.showInformationDialogAndWait(Localization.lang("Check %0 API Key Setting", apiKeyName), Localization.lang("Connection successful!"));
+        } else {
+            dialogService.showErrorDialogAndWait(Localization.lang("Check %0 API Key Setting", apiKeyName), Localization.lang("Connection failed!"));
+        }
     }
 }
